Added current player themes from drive into radio

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,16 +5,18 @@ GameName=MyProject
 bSubstepping=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
+EditorStartupMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap.VehicleAdvExampleMap
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/GameInstance.GameInstance_C
-GameDefaultMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode.VehicleAdvGameMode_C
+GameDefaultMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap.VehicleAdvExampleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
