Modified bike to change textures automatically, fixed input on main menu.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,15 +8,15 @@ bSubstepping=True
 EditorStartupMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap.VehicleAdvExampleMap
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/GameInstance.GameInstance_C
-GameDefaultMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap.VehicleAdvExampleMap
+GameDefaultMap=/Game/Scenes/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=None
+GlobalDefaultGameMode=/Game/Blueprints/Bike_BP/VehicleAdvGameMode.VehicleAdvGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
