Added respawn functionality, restart button, started character select

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameName=MyProject
 bSubstepping=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VehicleAdvBP/Maps/VehicleAdvExampleMap.VehicleAdvExampleMap
+EditorStartupMap=/Game/Scenes/VehicleAdvExampleMap.VehicleAdvExampleMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -16,7 +16,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/GameInstance.GameInstance_C
 GameDefaultMap=/Game/Scenes/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/Bike_BP/VehicleAdvGameMode.VehicleAdvGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/RacingGameMode.RacingGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
